--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -16,18 +16,27 @@
 							Email
 						</label>
 						<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email" name="email">
+						{% for error in errors.email %}
+							<p class="text-red-500 text-xs italic">{{error}}</p>
+						{% endfor %}
 					</div>
 					<div class="mb-4">
 						<label class="block text-gray-700 text-sm font-bold mb-2" for="password">
 							Password
 						</label>
 						<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************" name="password">
+						{% for error in errors.password %}
+							<p class="text-red-500 text-xs italic">{{error}}</p>
+						{% endfor %}
 					</div>
 					<div class="mb-4">
 						<label class="block text-gray-700 text-sm font-bold mb-2" for="password_confirm">
 							Confirm password
 						</label>
 						<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="password_confirm" type="password" placeholder="******************" name="password_confirm">
+						{% for error in errors.password_confirm %}
+							<p class="text-red-500 text-xs italic">{{error}}</p>
+						{% endfor %}
 					</div>
 				</div>
 				<div class="flex">
@@ -36,18 +45,27 @@
 							Last Name
 						</label>
 						<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="lastName" type="text" placeholder="Last Name" name="lastName">
+						 {% for error in errors.lastName %}
+							<p class="text-red-500 text-xs italic">{{error}}</p>
+						{% endfor %}
 					</div>
 					<div class="mb-4">
 						<label class="block text-gray-700 text-sm font-bold mb-2" for="firstName">
 							First Name
 						</label>
 						<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="firstName" type="text" placeholder="First Name" name="firstName">
+						 {% for error in errors.firstName %}
+							<p class="text-red-500 text-xs italic">{{error}}</p>
+						{% endfor %}
 					</div>
 					<div class="mb-4">
 						<label class="block text-gray-700 text-sm font-bold mb-2" for="username">
 							Username
 						</label>
 						<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username" name="username">
+						 {% for error in errors.username %}
+							<p class="text-red-500 text-xs italic">{{error}}</p>
+						{% endfor %}
 					</div>
 				</div>
 
