--- a/templates/components/home/filters.html.twig
+++ b/templates/components/home/filters.html.twig
@@ -1,7 +1,11 @@
 {% block filters %}
 
 	<div class="flex w-full items-center justify-center">
-		<button class="bg-blue-500 rounded pl-3 pr-3 pt-1 pb-1 text-white font-semibold ml-[10px] mr-[10px]">Themes</button>
+		<select name="category" id="category" class="bg-blue-500 rounded pl-3 pr-3 pt-1 pb-1 text-white font-semibold ml-[10px] mr-[10px]">
+			{% for category in Allcategories %}
+				<option value="{{ category.id }}">{{ category.title }}</option>
+			{% endfor %}
+		</select>
 		<button class="block flex items-center justify-center bg-blue-500 rounded pl-3 pr-3 pt-1 pb-1 text-white font-semibold ml-[10px] mr-[10px]">
 			<img src="/img/arrow-down.svg" alt="" class="m-[4px]"/>
 			<span>Rating</span>
